# Ninjalauncher

./: Cargo.toml  Makefile  README.md
src/: main.rs  mojang.rs  old_main.rs  util.rs
