[package]
name = "ninjalauncher"
version = "0.1.0"
authors = ["Ninjananas <ninjananas@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
druid = { path = "../druid/druid", features = ["im"] }
ureq = { version = "*", features = ["json"] }
serde = "*"
serde_json = "*"
uuid = { version = "*", features = ["v4"] }
#rand = "*"